@@ -22,6 +22,7 @@
 
 #include <gig.h>
 
+#include <cairomm/context.h>
 #include <gtkmm/drawingarea.h>
 #include <gtkmm/entry.h>
 #include <gtkmm/label.h>
